contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/upgradeable/fail/missing_upgradeable_internal.rs
// UI (trybuild) negative test: `#[upgradeable]` requires `UpgradeableInternal` impl.

use soroban_sdk::{contract, Address};

#[contract]
#[common_macros::ownable]
#[common_macros::upgradeable]
pub struct MyContract;

fn main() {}
