contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/upgradeable/fail/missing_upgradeable_internal.stderr
warning: unused import: `Address`
 --> tests/ui/upgradeable/fail/missing_upgradeable_internal.rs:3:29
  |
3 | use soroban_sdk::{contract, Address};
  |                             ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `MyContract: UpgradeableInternal` is not satisfied
 --> tests/ui/upgradeable/fail/missing_upgradeable_internal.rs:8:12
  |
8 | pub struct MyContract;
  |            ^^^^^^^^^^ the trait `UpgradeableInternal` is not implemented for `MyContract`
  |
note: required by a bound in `Upgradeable`
 --> $WORKSPACE/contracts/utils/src/upgradeable.rs
  |
  | pub trait Upgradeable: UpgradeableInternal + Auth {
  |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `Upgradeable`

error[E0277]: the trait bound `MyContract: UpgradeableInternal` is not satisfied
 --> tests/ui/upgradeable/fail/missing_upgradeable_internal.rs:8:12
  |
8 | pub struct MyContract;
  |            ^^^^^^^^^^ the trait `UpgradeableInternal` is not implemented for `MyContract`
  |
note: required by a bound in `utils::upgradeable::Upgradeable::upgrade`
 --> $WORKSPACE/contracts/utils/src/upgradeable.rs
  |
  | pub trait Upgradeable: UpgradeableInternal + Auth {
  |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `Upgradeable::upgrade`
...
  |     fn upgrade(env: &soroban_sdk::Env, new_wasm_hash: &soroban_sdk::BytesN<32>) {
  |        ------- required by a bound in this associated function

error[E0277]: the trait bound `MyContract: UpgradeableInternal` is not satisfied
 --> tests/ui/upgradeable/fail/missing_upgradeable_internal.rs:8:12
  |
8 | pub struct MyContract;
  |            ^^^^^^^^^^ the trait `UpgradeableInternal` is not implemented for `MyContract`
  |
note: required by a bound in `utils::upgradeable::Upgradeable::migrate`
 --> $WORKSPACE/contracts/utils/src/upgradeable.rs
  |
  | pub trait Upgradeable: UpgradeableInternal + Auth {
  |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `Upgradeable::migrate`
...
  |     fn migrate(env: &soroban_sdk::Env, migration_data: &soroban_sdk::Bytes) {
  |        ------- required by a bound in this associated function
